RESOLVED FIXED14143
Tooltips not displayed on Windows
https://bugs.webkit.org/show_bug.cgi?id=14143
Summary Tooltips not displayed on Windows
Vishal Agrawal
Reported 2007-06-14 12:43:24 PDT
In the Mac OS X version of Safari, if you highlight your mouse over the thread you will be shown a small sample of the first posts text of that thread. In the Windows version of Safari, this is not the case. Almost every vBulletin site has the tooltips and it's a great way to check if you want to engage in discussion of a particular thread or not quickly by simply over viewing the forum.
Attachments
Patch with ChangeLog (6.19 KB, patch)
2007-07-05 13:01 PDT, Adam Roben (:aroben)
oliver: review+
Mark Rowe (bdash)
Comment 1 2007-06-14 13:22:22 PDT
This works correctly in the latest nightly build on Mac OS X. Can someone please test this is in the latest nightly for Windows?
Vishal Agrawal
Comment 2 2007-06-14 14:38:36 PDT
(In reply to comment #1) > This works correctly in the latest nightly build on Mac OS X. Can someone > please test this is in the latest nightly for Windows? > I just tried it using Safari 3.0.1 (522.12.2) (WebKit r23529 was built on 14 June 2007 and is a 8.9 MB download) and tooltips are NOT working.
Matt Lilek
Comment 3 2007-06-14 15:26:29 PDT
Confirmed on Windows XP with Safari 3.0.1 Beta (522.12.2) and the r23529 nightly.
Matt Lilek
Comment 4 2007-06-15 16:47:37 PDT
This is now listed under "Coming Soon" on the Safari download site (http://www.apple.com/safari/download/)
Adam Roben (:aroben)
Comment 5 2007-07-04 22:53:32 PDT
Adam Roben (:aroben)
Comment 6 2007-07-05 13:01:48 PDT
Created attachment 15404 [details] Patch with ChangeLog
Oliver Hunt
Comment 7 2007-07-05 13:05:58 PDT
Comment on attachment 15404 [details] Patch with ChangeLog Is it possible to test this at all? (eg. through delegate callbacks or something) Also have you tested that the tooltips are positioned correctly when using frames? Otherwise, r=me
Adam Roben (:aroben)
Comment 8 2007-07-05 13:15:30 PDT
(In reply to comment #7) > (From update of attachment 15404 [details] [edit]) > Is it possible to test this at all? (eg. through delegate callbacks or > something) There aren't any delegate calls made for tooltips, and they aren't a part of the page at all, so the only conceivable way to test them would be through pixel tests, which we don't have on Windows yet. > Also have you tested that the tooltips are positioned correctly when using > frames? Yes, and it all works just fine, since Windows positions the tooltip based on the cursor position. > Otherwise, r=me Thanks!
Adam Roben (:aroben)
Comment 9 2007-07-05 13:20:03 PDT
Landed as r24022
Note You need to log in before you can comment on or make changes to this bug.