Fix Bug 14143: Tooltips not displayed on Windows http://bugs.webkit.org/show_bug.cgi?id=14143 <rdar://problem/4719799>

Reviewed by Oliver.

* WebChromeClient.cpp:
(WebChromeClient::setToolTip): Call up to WebView.
* WebView.cpp:
(WebView::WebView): Initialize m_toolTipHwnd member.
(WebView::initWithFrame): Set up the tool tip window.
(initCommonControls): Added.
(WebView::initializeToolTipWindow): Added.
(WebView::setToolTip): Set the tool tip text and enable/disable the
tool tip.
* WebView.h: Added/updated declarations.


Canonical link: https://commits.webkit.org/18764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24022 268f45cc-cd09-0410-ab3c-d52691b4dbfc