WebKit/win/WebView.h
@@ -652,11 +652,14 @@ public:
 
     bool isPainting() const { return m_paintCount > 0; }
 
+    void setToolTip(const WebCore::String&);
+
 protected:
     static bool allowSiteSpecificHacks() { return s_allowSiteSpecificHacks; }
     void preflightSpellChecker();
     bool continuousCheckingAllowed();
     void initializeCacheSizesIfNecessary();
+    void initializeToolTipWindow();
 
     ULONG m_refCount;
     WebCore::String m_groupName;
@@ -697,6 +700,9 @@ protected:
     bool m_hasSpellCheckerDocumentTag;
     bool m_smartInsertDeleteEnabled;
     bool m_didClose;
+
+    HWND m_toolTipHwnd;
+    WebCore::String m_toolTip;
 
     static bool s_allowSiteSpecificHacks;
 };
